@@ -1,5 +1,10 @@
 2007-09-25  Dan Williams  <dcbw@redhat.com>
 
+	* src/vpn-properties/nm-vpn-properties.c
+		- Fix various errors and warnings
+
+2007-09-25  Dan Williams  <dcbw@redhat.com>
+
 	* src/password-dialog.c
 		- (response_cb): use nm_settings_new_error() to create error messages
 
